devicesinlan 0.1.0 20150519
===========================
- Basic funcionality
- Spanish translation
