@@ -3,3 +3,8 @@ devicesinlan 0.1.0 20150519
 - Basic funcionality
 - Spanish translation
 
+devicesinlan 0.2.0 XXXXXXXX
+===========================
+- Improved class developing
+- Add argument to select net interfaz
+- MAC address matching is now case insensitive
